plugins {
	id 'org.springframework.boot' version '3.0.5'
	id 'io.spring.dependency-management' version '1.1.0'
	id 'java-library'
	id "org.flywaydb.flyway" version "9.8.1"
	id 'org.owasp.dependencycheck' version '8.2.1'
	id "io.freefair.lombok" version "8.0.1"
	id 'jacoco'
	id "org.sonarqube" version "4.0.0.2929"
}

group = 'de.thg'
version = '0.0.1-SNAPSHOT'

dependencies {
	implementation platform('org.testcontainers:testcontainers-bom:1.18.0')

	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0"
	runtimeOnly 'org.hibernate.validator:hibernate-validator:8.0.0.Final'

	implementation 'com.drewnoakes:metadata-extractor:2.18.0'
	implementation 'org.apache.commons:commons-imaging:1.0-alpha2'
	implementation 'org.apache.tika:tika-core:2.7.0'
	implementation 'org.owasp:dependency-check-gradle:8.1.2'
	runtimeOnly 'org.postgresql:postgresql:42.5.4'

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'org.assertj:assertj-core:3.24.2'
	testImplementation "org.testcontainers:testcontainers"
	testImplementation "org.testcontainers:junit-jupiter"
	testImplementation 'org.testcontainers:postgresql'
}

java {
	toolchain.languageVersion.set(JavaLanguageVersion.of(17))
}

test {
	useJUnitPlatform()
}

jacocoTestReport {
	reports {
		xml.enabled true
	}
	dependsOn test
}

check.dependsOn dependencyCheckAnalyze

flyway {
	url = 'jdbc:postgresql://localhost:5432/tom'
	user = 'tom'
	password = 'tom'
}